added frontend and other static files and fixed filtered class delivery
